--- a/frontend/vue-komikscom/package.json
+++ b/frontend/vue-komikscom/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "@vueuse/core": "^13.3.0",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
